--- a/TestingPlatformAPI/appsettings.json
+++ b/TestingPlatformAPI/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "AzureAd": {
+        "AuthorityInstance": "https://login.microsoftonline.com/",
+        "IssuerInstance": "https://sts.windows.net/",
+        "Client": "api://77710caa-b0ea-4da2-87c9-001d1bfd100f",
+        "TenantId": "b3e68880-3490-46e6-b295-a36e4be20728"
     }
-  },
-  "AllowedHosts": "*"
 }
