--- a/Helpers/Helpers.csproj
+++ b/Helpers/Helpers.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Identity.Client.Extensions.Msal" Version="4.66.1" />
+  </ItemGroup>
+
 </Project>
